tests/ui/unpin_impl.stderr
error[E0282]: type annotations needed
 --> tests/ui/unpin_impl.rs:4:14
  |
4 |         type Opaque;
  |              ^^^^^^ cannot infer type
